syntax = "proto3";

package example;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service UserService {
  rpc AddUser(AddUserReq) returns (User) {}
  rpc ListUsers(ListUsersReq) returns (stream User) {}
  rpc Since(google.protobuf.Timestamp) returns (google.protobuf.Empty) {}
}

enum Role {
  GUEST = 0;
  MEMBER = 1;
  ADMIN = 2;
}

message AddUserReq {
  string name = 1;
}

message User {
  string id = 1;
  string name = 2;
  repeated Role roles = 3;
  repeated string names = 4;
  google.protobuf.Timestamp create_date = 5;
}

message UpdateUserRequest {
  google.protobuf.StringValue name = 1;
}

message ListUsersReq {
  google.protobuf.Timestamp created_since = 1;
  google.protobuf.Duration older_than = 2;
}
